# UserProfile

./: README.md  pyproject.toml
UserProfile/: settings.py  urls.py
user/: views.py
user/static/css/: style.css
user/templates/: base.html  change_password.html  dashboard.html  forgot_password.html  login.html  password_reset_confirm.html  password_reset_email.html  profile.html  signup.html
