[project]
name = "UserProfile"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Amulya Paritosh", email = "amulya1171@gmail.com"},
]
dependencies = [
    "django>=5.1.3",
    "python-decouple>=3.8",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
